--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "frontend": "npm --prefix frontend run dev",
     "start": "npm run dev",
     "build": "npm --prefix frontend run build",
-    "install-all": "npm ci --prefix backend && npm ci --prefix frontend",
-    "postinstall": "npm --prefix backend install && npm --prefix frontend install"
+    "install-all": "npm ci --prefix backend && npm ci --prefix frontend"
   },
   "keywords": [
     "amazon",
@@ -22,7 +21,12 @@
   ],
   "author": "Amazon Clone Developer",
   "license": "MIT",
+  "dependencies": {
+    "serverless-http": "^3.2.0",
+    "express": "^4.18.2"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "typescript": "^5.9.2"
   }
 }
