--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,106 @@
-# Node
+# Dependencies
 node_modules/
-**/node_modules/
+*/node_modules/
 
 # Build outputs
-**/dist/
-frontend/dist/
-backend/dist/
+dist/
+build/
+*/dist/
+*/build/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-**/*.log
+lerna-debug.log*
 
-# Env files
-.env
-**/.env*
-backend/.env
-frontend/.env
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 
-# IDE/editor
-.vscode/
-.DS_Store
-Thumbs.db
-.idea/
-
-# Coverage and test artifacts
+# Coverage directory used by tools like istanbul
 coverage/
-**/coverage/
 *.lcov
 
-# Misc
-.tmp/
-.temp/
-.sass-cache/
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
 .cache/
-.vercel
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Netlify
+.netlify/
+
+# Vercel (keeping this for reference but should be empty now)
+.vercel/
