--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "frontend": "npm --prefix frontend run dev",
     "start": "npm run dev",
     "build": "npm --prefix frontend run build",
-    "install-all": "npm ci --prefix backend && npm ci --prefix frontend"
+    "install-all": "npm ci --prefix backend && npm ci --prefix frontend",
+    "build:netlify": "npm --prefix frontend run build && npm --prefix netlify/functions install",
+    "dev:netlify": "netlify dev"
   },
   "keywords": [
     "amazon",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "netlify-cli": "^17.0.0"
   }
 }
