--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run dev",
     "build": "npm --prefix frontend run build",
     "install-all": "npm ci --prefix backend && npm ci --prefix frontend",
-    "build:netlify": "npm --prefix frontend run build && npm --prefix netlify/functions install",
+    "build:netlify": "npm ci --prefix frontend && npm --prefix frontend run build && npm ci --prefix netlify/functions",
     "dev:netlify": "netlify dev"
   },
   "keywords": [
