--- a/netlify.toml
+++ b/netlify.toml
@@ -21,7 +21,8 @@
 [functions]
   directory = "netlify/functions"
   included_files = [
-    "backend/dist/**"
+    "backend/dist/**",
+    "netlify/functions/backend-dist/**"
   ]
   node_bundler = "esbuild"
   external_node_modules = [
