--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test:seed": "node scripts/testSeed.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "amazon-clone-mern": "file:..",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
